# sudoku

./: .gitignore  Cargo.toml
consts/src/: lib.rs
puzzlefile/: Cargo.toml
puzzlefile/src/: error.rs  file.rs  file_builder.rs  lib.rs  marks.rs  meta.rs
sudoku/: Cargo.toml
sudoku-config/: Cargo.toml
sudoku-config/src/: error.rs  lib.rs  manifest.rs
sudoku-core/: Cargo.toml
sudoku-core/src/: lib.rs  marks.rs  math.rs
sudoku-log/: Cargo.toml
sudoku-log/src/: lib.rs
sudoku-scrape/: Cargo.toml
sudoku-scrape/src/: dump.rs  main.rs  nyt.rs  scraper.rs
sudoku-tauri/: makeMingCuteShim.js  package.json  vite.config.ts
sudoku-tauri/src/: App.tsx  global.css  main.tsx  routeTree.gen.ts
sudoku-tauri/src-tauri/: Cargo.toml  tauri.conf.json
sudoku-tauri/src-tauri/src/: main.rs
sudoku-tauri/src/api/: common.ts
sudoku-tauri/src/api/core/: api.ts
sudoku-tauri/src/api/hooks/: config.ts  puzzles.ts
sudoku-tauri/src/api/types/: config.ts  error.ts  index.ts  puzzle.ts
sudoku-tauri/src/components/: Badge.tsx  Difficulty.tsx  GenericError.tsx  MingCuteIcon.css  SourceBadge.tsx  Spinner.tsx  ThemeManager.tsx
sudoku-tauri/src/game/: main.tsx
sudoku-tauri/src/game/ui/: board.tsx  cell.tsx  square.tsx
sudoku-tauri/src/lib/: index.ts  mingcute_gen.ts  theme.ts
sudoku-tauri/src/routes/: __root.tsx  index.lazy.tsx  puzzle.$puzzleId.lazy.tsx
sudoku/src/: cell.rs  main.rs
