[package]
name = "sudoku-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = [""]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sudoku-config = { path = "../../sudoku-config" }
sudoku-log = { path = "../../sudoku-log" }
puzzlefile = { path = "../../puzzlefile" }
log = "0.4.22"
thiserror = "1.0.63"
strum = "0.26.3"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
